Perkin-UAT/force-app/main/default/objects/Open_Lead_Notice__c/Open_Lead_Notice__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Open Lead Notice</label>
</CustomObject>