Perkin-UAT/force-app/main/default/objects/Open_Lead_Notice__c/fields/Id1__c.field-meta.xml
<CustomField>
    <fullName>Id1__c</fullName>
    <label>Id1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>