Perkin-UAT/force-app/main/default/objects/Open_Lead_Notice__c/fields/Id2__c.field-meta.xml
<CustomField>
    <fullName>Id2__c</fullName>
    <label>Id2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>