Perkin-UAT/force-app/main/default/objects/Open_Lead_Notice__c/fields/Id3__c.field-meta.xml
<CustomField>
    <fullName>Id3__c</fullName>
    <label>Id3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>